--- a/components/function-plot.html
+++ b/components/function-plot.html
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="r-shell.html" />
+    <link rel="next" href="density-plot.md" />
     
     
-    <link rel="prev" href="feedback.html" />
+    <link rel="prev" href="plots.md" />
     
 
     </head>
@@ -174,7 +174,65 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="feedback.html">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+            
+                <span>
+            
+                    
+                    Dashboard
+            
+                </a>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+            
+                <span>
+            
+                    
+                    CheckboxInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+            
+                <span>
+            
+                    
+                    NumberInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+            
+                <span>
+            
+                    
+                    SliderInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.2" data-path="feedback.html">
             
                 <a href="feedback.html">
             
@@ -187,7 +245,21 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.2" data-path="function-plot.html">
+        <li class="chapter " data-level="1.4.3" data-path="plots.md">
+            
+                <span>
+            
+                    
+                    Plots
+            
+                </a>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter active" data-level="1.4.3.1" data-path="function-plot.html">
             
                 <a href="function-plot.html">
             
@@ -200,7 +272,51 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+            
+                <span>
+            
+                    
+                    Density Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+            
+                <span>
+            
+                    
+                    R Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4" data-path="r-help.html">
+            
+                <a href="r-help.html">
+            
+                    
+                    R Help
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.5" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -213,7 +329,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="switch.html">
+        <li class="chapter " data-level="1.4.6" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -226,7 +342,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="latex.html">
+        <li class="chapter " data-level="1.4.7" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -239,7 +355,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.8" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -361,12 +477,12 @@
 
             
                 
-                <a href="feedback.html" class="navigation navigation-prev " aria-label="Previous page: Feedback Buttons">
+                <a href="plots.md" class="navigation navigation-prev " aria-label="Previous page: Plots">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="r-shell.html" class="navigation navigation-next " aria-label="Next page: R Shell">
+                <a href="density-plot.md" class="navigation navigation-next " aria-label="Next page: Density Plot">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -377,7 +493,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Function Plot","level":"1.4.2","depth":2,"next":{"title":"R Shell","level":"1.4.3","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"Feedback Buttons","level":"1.4.1","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/function-plot.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-06T12:01:58.861Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Function Plot","level":"1.4.3.1","depth":3,"next":{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},"previous":{"title":"Plots","level":"1.4.3","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.3.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.3.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/function-plot.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
