--- a/components/r-help.html
+++ b/components/r-help.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="" >
     <head>
-        <title>Switch · ISLE Editor Documentation</title>
+        <title>R Help · ISLE Editor Documentation</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="latex.html" />
+    <link rel="next" href="r-shell.html" />
     
     
-    <link rel="prev" href="r-shell.html" />
+    <link rel="prev" href="r-plot.md" />
     
 
     </head>
@@ -303,7 +303,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="r-help.html">
+        <li class="chapter active" data-level="1.4.4" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -329,7 +329,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.6" data-path="switch.html">
+        <li class="chapter " data-level="1.4.6" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -416,7 +416,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Switch</a>
+        <a href=".." >R Help</a>
     </h1>
 </div>
 
@@ -431,17 +431,16 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="switch-components">Switch Components</h1>
-<p>The Switch component allows the display of one element out of a list of several elements. Users can cycle through the different children of the Switch tag by clicking on the currently displayed one.</p>
+                                <h1 id="r-help">R Help</h1>
+<p>Make words pull up R documentation in a modal window when clicked.</p>
 <p>Example:</p>
-<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">Switch</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">span</span>&gt;</span>Option 1<span class="hljs-tag">&lt;/<span class="hljs-name">span</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">span</span>&gt;</span>Option 2<span class="hljs-tag">&lt;/<span class="hljs-name">span</span>&gt;</span>
-<span class="hljs-tag">&lt;/<span class="hljs-name">Switch</span>&gt;</span>
+<pre><code class="lang-html"><span class="hljs-tag">&lt;<span class="hljs-name">RHelp</span> <span class="hljs-attr">library</span>=<span class="hljs-string">&quot;graphics&quot;</span>&gt;</span>hist<span class="hljs-tag">&lt;/<span class="hljs-name">RHelp</span>&gt;</span> is used to create a histogram.
 </code></pre>
 <h2 id="options">Options</h2>
 <ul>
-<li><code>onChange</code>: Callback invoked when elements are switched. Receives as its first argument <code>pos</code> the index of the currently displayed child. Default: <code>null</code></li>
+<li><strong>func</strong>: name of the <code>R function</code> for which to open the documentation. If not supplied, the content of the <code>RHelp</code> tag is assumed to be equal to the name of the function. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>library</strong>: name of the R package in which the function resides. Default: <code>base</code>.</li>
+<li><strong>visible</strong>: <code>boolean</code> indicating whether to help popover should be opened at startup. Default: <code>false</code>.</li>
 </ul>
 
                                 
@@ -470,12 +469,12 @@
 
             
                 
-                <a href="r-shell.html" class="navigation navigation-prev " aria-label="Previous page: R Shell">
+                <a href="r-plot.md" class="navigation navigation-prev " aria-label="Previous page: R Plot">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="latex.html" class="navigation navigation-next " aria-label="Next page: LaTeX Equations">
+                <a href="r-shell.html" class="navigation navigation-next " aria-label="Next page: R Shell">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -486,7 +485,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Switch","level":"1.4.6","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.7","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.5","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/switch.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Help","level":"1.4.4","depth":2,"next":{"title":"R Shell","level":"1.4.5","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.3.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-help.md","mtime":"2016-08-13T16:08:41.751Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
