--- a/components/r-shell.html
+++ b/components/r-shell.html
@@ -60,7 +60,7 @@
     <link rel="next" href="switch.html" />
     
     
-    <link rel="prev" href="function-plot.html" />
+    <link rel="prev" href="r-help.html" />
     
 
     </head>
@@ -174,7 +174,65 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.1" data-path="feedback.html">
+        <li class="chapter " data-level="1.4.1" data-path="dashboard.md">
+            
+                <span>
+            
+                    
+                    Dashboard
+            
+                </a>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.4.1.1" data-path="checkbox-input.md">
+            
+                <span>
+            
+                    
+                    CheckboxInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.1.2" data-path="number-input.md">
+            
+                <span>
+            
+                    
+                    NumberInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.1.3" data-path="slider-input.md">
+            
+                <span>
+            
+                    
+                    SliderInput
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.2" data-path="feedback.html">
             
                 <a href="feedback.html">
             
@@ -187,7 +245,21 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="function-plot.html">
+        <li class="chapter " data-level="1.4.3" data-path="plots.md">
+            
+                <span>
+            
+                    
+                    Plots
+            
+                </a>
+            
+
+            
+            <ul class="articles">
+                
+    
+        <li class="chapter " data-level="1.4.3.1" data-path="function-plot.html">
             
                 <a href="function-plot.html">
             
@@ -200,7 +272,51 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.3" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.3.2" data-path="density-plot.md">
+            
+                <span>
+            
+                    
+                    Density Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.3.3" data-path="r-plot.md">
+            
+                <span>
+            
+                    
+                    R Plot
+            
+                </a>
+            
+
+            
+        </li>
+    
+
+            </ul>
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.4" data-path="r-help.html">
+            
+                <a href="r-help.html">
+            
+                    
+                    R Help
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter active" data-level="1.4.5" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -213,7 +329,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="switch.html">
+        <li class="chapter " data-level="1.4.6" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -226,7 +342,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="latex.html">
+        <li class="chapter " data-level="1.4.7" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -239,7 +355,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.8" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -327,6 +443,9 @@
 <li><code>code</code>: R code <code>string</code> to be evaluated. Default: <code>&apos;&apos;</code>.</li>
 <li><code>lines</code>: <code>number</code> specifying how many lines to display. Default: <code>5</code>.</li>
 <li><code>onResult</code>: Callback <code>function</code> that is invoked whenever the result of a code execution is obtained from the cloud. The result <code>string</code> is passed as the only argument to the callback function. Default: <code>null</code>.</li>
+<li><code>solution</code>: For programming questions, an R code <code>string</code> representing the official solution can be supplied. Default: <code>&apos;&apos;</code>.</li>
+<li><code>libraries</code>: <code>Array</code> of R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
+<li><code>hints</code>: For programming questions, an <code>Array</code> of <code>strings</code> providing guidance on how to approach the problem. Default: <code>[]</code>.</li>
 <li><code>fontSize</code>: <code>number</code> specifying the used font size in the shell window. Default: <code>16</code>.</li>
 <li><code>fontFamily</code>: <code>string</code> denoting the font-family used in the shell window. Default: <code>Courier New</code>.</li>
 </ul>
@@ -357,7 +476,7 @@
 
             
                 
-                <a href="function-plot.html" class="navigation navigation-prev " aria-label="Previous page: Function Plot">
+                <a href="r-help.html" class="navigation navigation-prev " aria-label="Previous page: R Help">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
@@ -373,7 +492,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.3","depth":2,"next":{"title":"Switch","level":"1.4.4","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"Function Plot","level":"1.4.2","depth":2,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-07-22T20:26:58.557Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-06T12:01:58.861Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Shell","level":"1.4.5","depth":2,"next":{"title":"Switch","level":"1.4.6","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"previous":{"title":"R Help","level":"1.4.4","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-shell.md","mtime":"2016-08-13T15:58:25.751Z","type":"markdown"},"gitbook":{"version":"3.1.1","time":"2016-08-13T17:57:18.999Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
